--- a/src/xmlvisual/XMLVisualUI.fxml
+++ b/src/xmlvisual/XMLVisualUI.fxml
@@ -17,11 +17,11 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem mnemonicParsing="false" onAction="#handleAbout" text="About" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <TreeView fx:id="treeView" prefHeight="200.0" prefWidth="200.0" />
+      <TreeView fx:id="treeView" prefWidth="600.0" VBox.vgrow="ALWAYS" />
    </children>
 </VBox>
